# Mini-Projects

./: README.md
simple_ca_rust/: Cargo.toml
simple_ca_rust/src/: ca.rs  grid.rs  main.rs  math.rs  parameters.rs  render.rs
snowfall/: CMakeLists.txt  grid.c  grid.h  render.c  render.h  sim.c  sim.h
snowfall_c/: errorcode.h  grid.h  main.c  render.c  render.h  sim.c
snowfall_c++/: CMakeLists.txt  README.md
snowfall_c++/src/: grid.h  main.cpp  render.cpp  render.h  sim.cpp  sim.h
snowfall_rust/: Cargo.toml
snowfall_rust/src/: constants.rs  main.rs  render.rs  sim.rs
